# raven

./: .env.defaults  .gitignore  README.md  README.rst  pyproject.toml
raven/: __init__.py  insert_item.py  main.py
raven/db/: raven_db.py
raven/db/sql/: insert_items.sql  insert_prices.sql  schema.sql  select_items.sql
raven/utils/: amazon_provider.py  headers.py
raven_api/: README.rst  __main__.py  pyproject.toml
raven_api/raven_api/: server.py
raven_api/tests/: test_raven_api.py
raven_core/: README.rst  pyproject.toml
raven_core/raven_core/: utils.py
raven_core/raven_core/db/: raven.db  raven_db.py
raven_core/raven_core/db/sql/: schema.sql
raven_core/raven_core/logging/: exceptions.py  logger.py
raven_core/raven_core/providers/: amazon_provider.py
raven_core/raven_core/utils/: logger.py
raven_core/tests/: test_raven_core.py
raven_scheduler/: README.rst  __main__.py  pyproject.toml
raven_scheduler/raven_scheduler/: __init__.py  insert_item.py  main.py
raven_scheduler/raven_scheduler/utils/: amazon_provider.py  exceptions.py
raven_scheduler/tests/: test_raven_scheduler.py
raven_scraper/: README.rst  __main__.py  pyproject.toml
raven_scraper/raven_scraper/: main.py
raven_scraper/raven_scraper/providers/: amazon_provider.py
raven_scraper/tests/: test_raven_scheduler.py
raven_ui/: .babelrc  .eslintrc.json  package-lock.json  package.json  tsconfig.json
raven_ui/src/: App.tsx  Theme.tsx  index.html  index.tsx
raven_ui/src/api/: index.tsx  types.ts
raven_ui/src/components/: Throbber.tsx
raven_ui/src/components/Button/: index.tsx  style.ts  types.ts
raven_ui/src/components/Dropdown/: index.tsx  style.ts  types.ts
raven_ui/src/components/ExpandCard/: index.tsx  style.ts  types.ts
raven_ui/src/components/FlipCard/: index.tsx  style.ts  types.ts
raven_ui/src/components/IconButton/: index.ts
raven_ui/src/components/Image/: index.tsx  style.ts  types.ts
raven_ui/src/components/InputBox/: index.tsx  style.ts  types.ts
raven_ui/src/components/PriceSlider/: index.tsx  style.ts  types.ts
raven_ui/src/components/SearchBox/: index.tsx  style.ts  types.ts
raven_ui/src/components/Throbber/: index.tsx  style.ts  types.ts
raven_ui/src/components/ToggleSwitch/: index.tsx  style.ts  types.ts
raven_ui/src/components/layout/: AppBody.tsx  Theme.tsx
raven_ui/src/context/: index.tsx
raven_ui/src/features/filter/: Filter.tsx
raven_ui/src/features/filter/components/: AvailabilityFilter.tsx  FilterSearch.tsx  PriceFilter.tsx  SearchFilter.tsx  index.ts
raven_ui/src/features/header/: Header.tsx  style.ts
raven_ui/src/features/header/components/: ToggleTheme.tsx  style.ts
raven_ui/src/features/home/: Home.tsx
raven_ui/src/features/insert/: InsertProduct.tsx  index.ts  style.ts
raven_ui/src/features/products/: Products.tsx
raven_ui/src/features/products/components/: InsertProduct.tsx  ProductGrid.tsx  ProductTile.tsx  index.ts  style.ts  types.ts
raven_ui/src/features/sort/: Sort.tsx
raven_ui/src/hooks/: useClickOutside.tsx  useFromNow.tsx
raven_ui/src/providers/: GlobalProvider.tsx
raven_ui/src/reducers/: globalReducer.ts
raven_ui/src/styles/: responsive.ts  theme.ts
raven_ui/src/types/: enums.ts  index.ts
raven_ui/src/utils/: formatting.ts  index.ts  localStorage.ts  regex.ts
raven_ui/src/views/About/: index.tsx  style.ts
raven_ui/src/views/Header/: index.tsx  style.ts
raven_ui/src/views/Header/components/: ToggleTheme.tsx  style.ts
raven_ui/src/views/Home/: HomeView.tsx  index.tsx  style.ts  types.ts
raven_ui/src/views/Home/context/: index.tsx
raven_ui/src/views/Home/providers/: queryProvider.tsx
raven_ui/src/views/header/: index.tsx
raven_ui/src/views/home/: index.tsx
raven_ui/webpack/: webpack.common.config.js  webpack.dev.config.js  webpack.prod.config.js  webpack.profile.config.js
(+34 files in other folders)
