[tool.poetry]
name = "raven"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
raven_api = {path = "raven_api", develop = true}
raven_scraper = {path = "raven_scraper", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
