[tool.poetry]
name = "raven_scraper"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
raven_core = {path = "../raven_core", develop = true }
schedule = "^1.1.0"
pyuseragents = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
