[tool.poetry]
name = "raven_scraper"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
raven_core = {path = "../raven_core", develop = true }
schedule = "^1.2.0"
fake-useragent = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
